[package]
name = "pygenestore"
version = "0.10.0"
edition = "2024"
description = "Numpy arrays to Lance storage format"
authors = ["Lorenzo <tunedconsulting@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tuned-org-uk/pygenestore"
homepage = "https://github.com/tuned-org-uk/pygenestore"
documentation = "https://github.com/tuned-org-uk/pygenestore"
readme = "README.md"
keywords = ["graph-data", "storage", "lance", "machine-learning"]
categories = ["algorithms", "mathematics", "science"]
exclude = [
    "target/*",
    "Cargo.lock",
    ".git/*",
    ".github/*",
    "*.tmp",
    "*.md",
    "*.bib",
    "*.cff",
    "test_data/*",
    "lance_data/*",
    "examples/*",
    "tests/output",
    "tests/small_datasets",
    "visualization_output",
    "tests/"
]


[lib]
name = "genestore"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use arrowspace;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
numpy = "0.27.1"
genegraph-storage = "0.10.0"
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
smartcore = "^0.4.8"
log = "^0.4"
env_logger = "0.11.8"
uuid = { version = "1.19.0", features = ["v4"] }
short-uuid = "0.2.1"
ndarray = "0.17.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
approx = "0.5"

[build-dependencies]
pyo3-build-config = "0.27.2"
